feat: finish register endpoint, add global exception middleware

--- a/Jobseer.API/appsettings.Development.json
+++ b/Jobseer.API/appsettings.Development.json
@@ -7,5 +7,10 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=Jobseer;Integrated Security=True;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "TestKey",
+    "Issuer": "Jobseer API",
+    "Audience": "Jobseer Client"
   }
 }
