--- a/Jobseer.Application/Jobseer.Application.csproj
+++ b/Jobseer.Application/Jobseer.Application.csproj
@@ -11,13 +11,14 @@
     </ItemGroup>
 	
     <ItemGroup>
-      <Folder Include="Repository\" />
+      <PackageReference Include="FluentValidation" Version="12.1.0" />
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.0" />
+      <PackageReference Include="MediatR" Version="13.1.0" />
+      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     </ItemGroup>
 	
     <ItemGroup>
-      <PackageReference Include="FluentValidation" Version="12.1.0" />
-      <PackageReference Include="MediatR" Version="13.1.0" />
-      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+      <Folder Include="Helpers\" />
     </ItemGroup>
 	
 </Project>
