feat: login endpoint

--- a/Jobseer.API/appsettings.Development.json
+++ b/Jobseer.API/appsettings.Development.json
@@ -11,6 +11,7 @@
   "Jwt": {
     "Key": "TestKey",
     "Issuer": "Jobseer API",
-    "Audience": "Jobseer Client"
+    "Audience": "Jobseer Client",
+    "ExpirationMinutes":  "3600"
   }
 }
